examples/gatewayapi/01-common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projectcontour-roots
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rootapp
  namespace: projectcontour-roots
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rootapp
  template:
    metadata:
      labels:
        app: rootapp
    spec:
      containers:
        - name: echo
          image: stevesloka/echo-server
          command: ["echo-server"]
          args:
            - --echotext=This is the default app site [rootapp]!
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rootapp
  name: rootapp
  namespace: projectcontour-roots
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: rootapp
  type: ClusterIP
